--- a/web/packages/studio/package.json
+++ b/web/packages/studio/package.json
@@ -14,15 +14,15 @@
     "e2e": "ng e2e"
   },
   "dependencies": {
-    "@angular/animations": "^12.2.16",
-    "@angular/common": "^12.2.16",
-    "@angular/compiler": "^12.2.16",
-    "@angular/core": "^12.2.16",
-    "@angular/forms": "^12.2.16",
-    "@angular/localize": "^12.2.16",
-    "@angular/platform-browser": "^12.2.16",
-    "@angular/platform-browser-dynamic": "^12.2.16",
-    "@angular/router": "^12.2.16",
+    "@angular/animations": "^13.2.2",
+    "@angular/common": "^13.2.2",
+    "@angular/compiler": "^13.2.2",
+    "@angular/core": "^13.2.2",
+    "@angular/forms": "^13.2.2",
+    "@angular/localize": "^13.2.2",
+    "@angular/platform-browser": "^13.2.2",
+    "@angular/platform-browser-dynamic": "^13.2.2",
+    "@angular/router": "^13.2.2",
     "@ng-bootstrap/ng-bootstrap": "^10.0.0",
     "@ngrx/effects": "^12.5.1",
     "@ngrx/router-store": "^12.5.1",
@@ -51,30 +51,30 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~12.2.16",
-    "@angular-eslint/builder": "12.7.0",
-    "@angular-eslint/eslint-plugin": "12.7.0",
-    "@angular-eslint/eslint-plugin-template": "12.7.0",
-    "@angular-eslint/schematics": "12.7.0",
-    "@angular-eslint/template-parser": "12.7.0",
-    "@angular/cli": "^12.2.16",
-    "@angular/compiler-cli": "^12.2.16",
-    "@angular/language-service": "^12.2.16",
+    "@angular-devkit/build-angular": "~13.2.3",
+    "@angular-eslint/builder": "13.0.1",
+    "@angular-eslint/eslint-plugin": "13.0.1",
+    "@angular-eslint/eslint-plugin-template": "13.0.1",
+    "@angular-eslint/schematics": "13.0.1",
+    "@angular-eslint/template-parser": "13.0.1",
+    "@angular/cli": "^13.2.3",
+    "@angular/compiler-cli": "^13.2.2",
+    "@angular/language-service": "^13.2.2",
     "@types/core-js": "^0.9.43",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.2",
-    "@types/jest": "^23.1.3",
+    "@types/jest": "^27.4.0",
     "@types/long": "^4.0.0",
     "@types/node": "^12.11.1",
     "@types/rx": "^4.1.1",
-    "@typescript-eslint/eslint-plugin": "4.28.2",
-    "@typescript-eslint/parser": "4.28.2",
+    "@typescript-eslint/eslint-plugin": "5.3.0",
+    "@typescript-eslint/parser": "5.3.0",
     "copyfiles": "^1.2.0",
-    "eslint": "^7.26.0",
+    "eslint": "^8.2.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
-    "jest": "^23.5.0",
-    "jest-preset-angular": "^6.0.0",
+    "jest": "^27.5.1",
+    "jest-preset-angular": "^11.1.0",
     "karma": "~6.3.15",
     "karma-chrome-launcher": "~3.1.0",
     "karma-cli": "~1.0.1",
@@ -84,20 +84,13 @@
     "protractor": "~7.0.0",
     "prr": "1.0.1",
     "ts-node": "~3.2.0",
-    "typescript": "~4.2.3 || ~4.3.2"
+    "typescript": ">=4.4.2 <4.6"
   },
   "jest": {
     "preset": "jest-preset-angular",
-    "roots": [
-      "<rootDir>/src/"
+    "setupFilesAfterEnv": [
+      "<rootDir>/setup-jest.ts"
     ],
-    "setupTestFrameworkScriptFile": "<rootDir>/src/setup-jest.ts",
-    "transform": {
-      "^.+\\.(ts|js|html)$": "<rootDir>/node_modules/jest-preset-angular/preprocessor.js"
-    },
-    "snapshotSerializers": [
-      "<rootDir>/node_modules/jest-preset-angular/AngularSnapshotSerializer.js",
-      "<rootDir>/node_modules/jest-preset-angular/HTMLCommentSerializer.js"
-    ]
+    "globalSetup": "jest-preset-angular/global-setup"
   }
 }
