--- a/web/packages/studio/package.json
+++ b/web/packages/studio/package.json
@@ -8,7 +8,7 @@
     "prebuild": "npm run test",
     "build": "ng build && npm run copy-to-bin",
     "test": "jest",
-    "lint": "echo 'Not implemented'",
+    "lint": "ng lint",
     "copy-to-bin": "copyfiles dist/* ../../../bin/win-x86/broker/studio -u 1",
     "clear-jest": "jest --clearCache",
     "e2e": "ng e2e"
@@ -23,11 +23,11 @@
     "@angular/platform-browser": "^13.2.2",
     "@angular/platform-browser-dynamic": "^13.2.2",
     "@angular/router": "^13.2.2",
-    "@ng-bootstrap/ng-bootstrap": "^10.0.0",
-    "@ngrx/effects": "^12.5.1",
-    "@ngrx/router-store": "^12.5.1",
-    "@ngrx/store": "^12.5.1",
-    "@ngrx/store-devtools": "^12.5.1",
+    "@ng-bootstrap/ng-bootstrap": "^11.0.0",
+    "@ngrx/effects": "^13.0.2",
+    "@ngrx/router-store": "^13.0.2",
+    "@ngrx/store": "^13.0.2",
+    "@ngrx/store-devtools": "^13.0.2",
     "@plexus-interop/broker": "latest",
     "@plexus-interop/client": "latest",
     "@plexus-interop/client-api": "latest",
@@ -38,7 +38,7 @@
     "@plexus-interop/transport-common": "latest",
     "@plexus-interop/websocket-transport": "latest",
     "arraybuffer-slice": "^0.1.2",
-    "bootstrap": "^4.5.0",
+    "bootstrap": "^4.6.0",
     "bootswatch": "^4.1.0",
     "core-js": "^2.5.3",
     "font-awesome": "^4.7.0",
@@ -52,11 +52,11 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~13.2.3",
-    "@angular-eslint/builder": "13.0.1",
-    "@angular-eslint/eslint-plugin": "13.0.1",
-    "@angular-eslint/eslint-plugin-template": "13.0.1",
-    "@angular-eslint/schematics": "13.0.1",
-    "@angular-eslint/template-parser": "13.0.1",
+    "@angular-eslint/builder": "^13.0.1",
+    "@angular-eslint/eslint-plugin": "^13.0.1",
+    "@angular-eslint/eslint-plugin-template": "^13.0.1",
+    "@angular-eslint/schematics": "^13.0.1",
+    "@angular-eslint/template-parser": "^13.0.1",
     "@angular/cli": "^13.2.3",
     "@angular/compiler-cli": "^13.2.2",
     "@angular/language-service": "^13.2.2",
@@ -84,7 +84,7 @@
     "protractor": "~7.0.0",
     "prr": "1.0.1",
     "ts-node": "~3.2.0",
-    "typescript": ">=4.4.2 <4.6"
+    "typescript": "~4.4.4"
   },
   "jest": {
     "preset": "jest-preset-angular",
