--- a/web/packages/metadata/package.json
+++ b/web/packages/metadata/package.json
@@ -27,7 +27,8 @@
   "main": "dist/main/src/index.js",
   "jest": {
     "testEnvironment": "node",
-    "setupTestFrameworkScriptFile": "<rootDir>/setup-jasmine.js",
+    "testRunner": "jest-jasmine2",
+    "setupFilesAfterEnv": ["<rootDir>/setup-jasmine.js"],
     "moduleFileExtensions": [
       "ts",
       "js"
