--- a/web/package.json
+++ b/web/package.json
@@ -112,7 +112,9 @@
     "tslib": "^2.3.1",
     "tslint": "5.8.0",
     "typescript": "~4.4.4",
-    "watchify": "^3.9.0"
+    "watchify": "^3.9.0",
+    "webpack": "^5.68.0",
+    "webpack-cli": "^4.9.2"
   },
   "dependencies": {
     "@plexus-interop/broker": "file:packages/broker",
