--- a/web/packages/broker/package.json
+++ b/web/packages/broker/package.json
@@ -9,7 +9,7 @@
     "build": "npm run build:main && npm run build:bundle",
     "build:main": "tsc -p tsconfig.json",
     "build:watch": "tsc -w -p tsconfig.json",
-    "build:bundle": "browserify dist/main/src/api/CrossDomainHostEntryPoint.js -s proxyHost -o dist/main/src/CrossDomainHostBuilder.bundle.js",
+    "build:bundle": "webpack",
     "lint": "tslint src/**/*.ts",
     "test": "jest --coverage --passWithNoTests"
   },
