--- a/web/packages/ccy-pair-rate-viewer/package.json
+++ b/web/packages/ccy-pair-rate-viewer/package.json
@@ -13,11 +13,10 @@
     "protobufjs": "6.11.2"
   },
   "scripts": {
-    "prebuild": "trash dist",
     "compile": "tsc -p tsconfig.json",
     "copy-assets": "copyfiles src/gen/* dist/main && copyfiles -f src/views/* dist",
     "prebuild:bundle": "npm run copy-assets",
-    "build:bundle": "browserify ./dist/main/src/index.js --outfile ./dist/app.bundle.js",
+    "build:bundle": "webpack ./dist/main/src/index.js --output-filename app.bundle.js --mode production --no-performance-hints",
     "build": "npm run compile && npm run copy-assets && npm run build:bundle",
     "postbuild:bundle": "copyfiles ./dist/* -f ../../../bin/win-x86/samples/quick-start/apps/WebCcyPairRateViewer"
   }
