--- a/web/packages/common-api-impl/package.json
+++ b/web/packages/common-api-impl/package.json
@@ -8,8 +8,7 @@
   "scripts": {
     "build": "npm run build:main && npm run build:bundle",
     "build:main": "tsc -p tsconfig.json",
-    "build:bundle": "npm run create-bundle",
-    "create-bundle": "browserify dist/main/src/api/InteropPlatformFactory.js -x websocket -s PlexusPlatformFactory -o dist/main/src/platform-factory.bundle.js",
+    "build:bundle": "webpack",
     "build:watch": "tsc -w -p tsconfig.json",
     "lint": "tslint src/**/*.ts",
     "test": "jest --coverage --passWithNoTests"
